demoapp1/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app1
  name: app1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app1

#Ingress for vote.k8sb32.xyz
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "canary.anrsservice.xyz"
    secretName: wc-tls-secret
  rules:
  - host: canary.anrsservice.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 80
